[gd_scene load_steps=5 format=2]

[ext_resource path="res://Events/Fishing_points/Fishing_point.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Fishing_point.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sounds/fishing_point_spawn.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]

[node name="Fishing_point" type="Node2D" groups=["Fishing_point"]]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Lifetime" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Spawn_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
